@@ -226,7 +226,7 @@ sub _parse {
             my $proj = $+{value};
             $raise_syntax_error->(__x(
                 qq{invalid project name "{project}": project names must not }
-                . 'begin with punctuation, contain "@", ":", or "#", or end in '
+                . 'begin with punctuation, contain "@", ":", "#", or blanks, or end in '
                 . 'punctuation or digits following punctuation',
                 project => $proj,
             )) unless $proj =~ /\A$name_re\z/;
@@ -307,7 +307,7 @@ sub _parse {
         # Raise errors for missing data.
         $raise_syntax_error->(__(
             qq{Invalid name; names must not begin with punctuation, }
-            . 'contain "@", ":", or "#", or end in punctuation or digits following punctuation',
+            . 'contain "@", ":", "#", or blanks, or end in punctuation or digits following punctuation',
         )) if !$params{name}
             || (!$params{yr} && $line =~ $ts_re);
 
@@ -894,13 +894,13 @@ sub _is_valid {
         if ($type eq 'change') {
             hurl plan => __x(
                 qq{"{name}" is invalid: changes must not begin with punctuation, }
-                . 'contain "@", ":", or "#", or end in punctuation or digits following punctuation',
+                . 'contain "@", ":", "#", or blanks, or end in punctuation or digits following punctuation',
                 name => $name,
             );
         } else {
             hurl plan => __x(
                 qq{"{name}" is invalid: tags must not begin with punctuation, }
-                . 'contain "@", ":", or "#", or end in punctuation or digits following punctuation',
+                . 'contain "@", ":", "#", or blanks, or end in punctuation or digits following punctuation',
                 name => $name,
             );
         }
@@ -1420,8 +1420,9 @@ character or a leading C<+> are to be deployed.
 =item * A tag.
 
 A named deployment tag, generally corresponding to a release name. Begins with
-a C<@>, followed by one or more non-whitespace characters, excluding "@", ":",
-and "#". The first and last characters must not be punctuation characters.
+a C<@>, followed by one or more non-blanks characters, excluding "@", ":",
+"#", and blanks. The first and last characters must not be punctuation
+characters.
 
 =item * A note.
 
