@@ -20,6 +20,8 @@ Revision history for Perl extension App::Sqitch
      - Allow tagging of an arbitrary change, not just the last change in the
        plan, by passing a chnage specification (name, ID, or tag) as the
        second argument to the `tag` command.
+     - Updated error messages to note that blank characters are not allowed in
+       project, change, or tag names.
 
 0.953  2013-02-21T23:37:57Z
      - Fixed test failure in `t/engine.t` triggered by a clock tick.
